     help browser when they shouldn't.
   * Gray-out GUI1 scrollbar upwards scrolling button by default when starting
     with the view scrolled to the top.
   * Truncate long Advanced Preferences entries with ellipses to avoid
     situations where the listbox is wider than the Preferences dialog frame
     (bug #19482).
 * Miscellaneous and bug fixes:
   * Added -Wno-documentation-deprecated-sync to the CMake pedantic flags.
   * Fixed several Doxygen issues found by Clang 3.4.
   * Fixed possible invalid memory access issue in the MP sides configuration
     code causing crashes for some users (bug #21449).
   * Fixed broken image references in the Gameplay -> Time of Day help topic.
   * The internal variables used by the LIMIT_RECRUITS WML macro are now
     cleared on victory.

Version 1.11.8:
 * Add-ons client:
   * Introduced new add-on type "SP/MP Campaign" for campaigns with
     "type=hybrid."
   * Fixed invalid file size data from the server crashing the client on the
     network transfer progress dialog (bug #20893).
   * Added support for specifying a feedback page URL in the .pbl file when
     publishing an add-on, currently intended for associating add-ons in the
     official add-ons server with topics from forums.wesnoth.org; this is
     achieved by including a [feedback] block with a topic_id=<number> key in
     it.
   * Redesigned Add-ons Description dialog, including support for displaying
     add-on feedback page URLs.
 * Add-ons server:
   * Fixed mishandling of inaccessible add-on packs resulting in multiple data
     conversion errors and stalling clients (bug #20893).
   * Added support for managing and emitting add-on feedback page URLs to
     clients ([server_info] feedback_url_format option in the server
     configuration file).
 * AI:
   * RCA AI: fix bug #21334: surrounded units don't attack
   * Coward Micro AI: new optional parameter [filter_second]
   * Simple Attack Micro AI: new optional parameter weapon=