@@ -15,6 +15,8 @@ Version 1.11.8+dev:
      help browser when they shouldn't.
    * Truncate long Advanced Preferences entries with ellipses to avoid
      situations where the listbox is wider than the Preferences dialog frame.
+   * Team color is now applied on the Unknown unit icon in the game Status
+     Table regardless of whether the side's leader unit supports team color.
 
  * Miscellaneous and bug fixes:
    * Fixed possible invalid memory access issue in the MP sides configuration
